# zk-wallet

./: .gitignore  .gitmodules  ARCHITECTURE_DIAGRAM.md  README.md  generate-verifier.mjs  package.json
app/backend/: .vercelignore  README.md  env.example  package.json  tsconfig.json
app/frontend/: README.md  env.example  next.config.ts  package.json  tsconfig.json  wbg-shim.js
backend/: QUICKSTART.md  README.md  env.example  next.config.js  package-lock.json  package.json
backend/src/: index.ts
contracts/: README.md  UltraVerifier.sol
contracts/confidential_erc20/: .env.example  Cargo.toml  README.md  abi.json  deploy.sh
contracts/confidential_erc20/src/: lib.rs  main.rs
contracts/confidential_erc20/src/tests/: mod.rs
contracts/test_contracts/: .env.example  .gitignore  README.md  hardhat.config.js  package-lock.json  package.json
contracts/user_wallet/: Cargo.toml  abi.json  deploy.sh
contracts/verifier/: DepositVerifier.sol  README.md  TransferVerifier.sol  WithdrawVerifier.sol  deployments.json  hardhat.config.js  package.json
contracts/verifier_mock/: README.md  package.json
contracts/wallet_factory/: Cargo.toml  abi.json  deploy.sh  hardhat.config.js
frontend/: package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx  providers.tsx
frontend/circuits/: transfer.json  withdraw.json
proofs/: deposit_proof.json
wallet_proof/: .gitignore  Nargo.toml  README.md  clean.sh  generate-verifier.mjs  package.json
wallet_proof/deposit/: Nargo.toml
wallet_proof/src/: main.nr
wallet_proof/test_data_generator/: Nargo.toml  (+1 more)
(+142 files in other folders)
